testdata/baselines/reference/submodule/conformance/nestedModules.errors.txt
nestedModules.ts(10,20): error TS2503: Cannot find namespace 'C'.
nestedModules.ts(31,8): error TS2749: 'M2.X.Point' refers to a value, but is being used as a type here. Did you mean 'typeof M2.X.Point'?


==== nestedModules.ts (2 errors) ====
    module A.B.C {
        export interface Point {
            x: number;
            y: number;
        }
    }
    
    module A {
        export module B {
            var Point: C.Point = { x: 0, y: 0 }; // bug 832088: could not find module 'C'
                       ~
!!! error TS2503: Cannot find namespace 'C'.
        }
    }
    
    module M2.X {
        export interface Point {
            x: number; y: number;
        }
    }
    
    module M2 {
        export module X {
            export var Point: number;
        }
    }
    
    var m = M2.X;
    var point: number;
    var point = m.Point;
    
    var p: { x: number; y: number; }
    var p: M2.X.Point;
           ~~~~~~~~~~
!!! error TS2749: 'M2.X.Point' refers to a value, but is being used as a type here. Did you mean 'typeof M2.X.Point'?
    